Store CString data in the CStringBuffer to avoid the double indirection https://bugs.webkit.org/show_bug.cgi?id=94562

Patch by Benjamin Poulain <bpoulain@apple.com> on 2012-08-21
Reviewed by Darin Adler.

Source/Platform:

* chromium/src/WebCString.cpp:
(WebKit::WebCString::length): Update the length() computation following the changes
in CStringBuffer.

Source/WebCore:

* bindings/cpp/WebDOMCString.cpp:
(WebDOMCString::length): With the patch, CStringBuffer hold the real string length instead of the
size of the buffer including the terminating zero. WebDOMCString is updated accordingly.

Source/WTF:

Previously, any non-trivial CString would require two allocations:
1) CStringBuffer (ref-counted container for CString's data).
2) VectorBuffer's m_buffer (the actual char data).

This patches changes CStringBuffer to hold the data previously owned by
WTF::Vector and WTF::VectorBuffer. This makes CString more efficient
both in CPU time and memory use.

* wtf/text/CString.cpp:
(WTF::CStringBuffer::createUninitialized): This new method allocate the memory
for CStringBuffer and its data. We simply allocate more memory after CStringBuffer
to hold the data.

The extra memory needed to store the terminating zero is now handled by design.
(WTF::CString::CString): Move the test for "str" one level up the stack from CString::init().
This avoid double checking the pointer when using the other constructor.
(WTF::CString::init):
(WTF::CString::newUninitialized):
(WTF::CString::copyBufferIfNeeded):
* wtf/text/CString.h:
(WTF::CStringBuffer::data):
(WTF::CStringBuffer::length):
(CStringBuffer):
(WTF::CStringBuffer::CStringBuffer):
(WTF::CStringBuffer::mutableData):
(WTF::CString::length):

Tools:

Add test coverage for WTF::CString.

* TestWebKitAPI/CMakeLists.txt:
* TestWebKitAPI/GNUmakefile.am:
* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WTF/CString.cpp:


Canonical link: https://commits.webkit.org/112427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126191 268f45cc-cd09-0410-ab3c-d52691b4dbfc