Source/Platform/chromium/src/WebCString.cpp
@@ -1,5 +1,6 @@
 /*
  * Copyright (C) 2009 Google Inc. All rights reserved.
+ * Copyright (C) 2012 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
@@ -77,8 +78,7 @@ size_t WebCString::length() const
 {
     if (!m_private)
         return 0;
-    // NOTE: The buffer's length includes the null byte.
-    return const_cast<WebCStringPrivate*>(m_private)->length() - 1;
+    return const_cast<WebCStringPrivate*>(m_private)->length();
 }
 
 const char* WebCString::data() const
